# semaphores

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  baron.cpp  baron.hpp  cart.cpp  cart.hpp  clock_thread.cpp  clock_thread.h  clock_thread.hpp  main.cpp  queue.hpp  riders_queue.hpp  single_riders.cpp
diagram/: semaphores.drawio
